--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,7 @@
         <center><div class="redes1">
                     <h2>🍽️Disfruta de nuestras delicias:</h2>
                 </div></center>
+                <div class="contenedor-menu">
         <center><div class="container">
                     <div class="column">
                         <span class="bold" style="margin-left: 5px;">Imagen</span>
@@ -50,6 +51,7 @@
                     </p>
                 </div></center>
                 <center><button class="rsvp-button">RSVP</button></center>  
+            </div>
                 <center><div class="container">
                     <div class="column">
                         <span class="bold" style="margin-left: 5px;">Imagen</span>
