--- a/menu.html
+++ b/menu.html
@@ -28,10 +28,10 @@
                         <span class="bold" style="margin-left: 5px;">Imagen</span>
                     </div>
                     <div class="column">
-                        <span class="bold" style="margin-left: 50px;">Nombre</span>
+                        <span class="bold" style="margin-left: 53px;">Nombre</span>
                     </div>
                     <div class="column">
-                        <span class="bold" style="margin-left: 93px;">Precio</span>
+                        <span class="bold" style="margin-left: 88px;">Precio</span>
                     </div>
                 </div></center> 
                 <!--Hamburguesa-->
@@ -52,6 +52,7 @@
                 </div></center>
                 <center><button class="rsvp-button">RSVP</button></center>  
             </div>
+            <div class="contenedor-menu">
                 <center><div class="container">
                     <div class="column">
                         <span class="bold" style="margin-left: 5px;">Imagen</span>
@@ -80,6 +81,7 @@
                     </p>
                 </div></center>
         <center><button class="rsvp-button" href="tel:+52 639 150 2990">RSVP</button></center>
+            </div>
         <center><div class="redes1"><p lang="en"></p></div></center>
         </main>
     </body>
