se agrega el aerticulo 'papas' al menú, se cambia el tipo de letra de el container de precio, se agrega el estilo 'italic' en la descripción de los productos y se estiliza el menú.

--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,38 @@
                 </div></center>
         <center><button class="rsvp-button" href="tel:+52 639 150 2990">RSVP</button></center>
             </div>
-        <center><div class="redes1"><p lang="en"></p></div></center>
+        <!--PAPAS-->
+        <div class="contenedor-menu">
+            <center><div class="container">
+                <div class="column">
+                    <span class="bold" style="margin-left: 5px;">Imagen</span>
+                </div>
+                <div class="column">
+                    <span class="bold" style="margin-left: 60px;">Nombre</span>
+                </div>
+                <div class="column">
+                    <span class="bold" style="margin-left: 90px;">Precio</span>
+                </div>
+            </div></center>
+    <!--Bonless-->
+    <center><div class="menu-item">
+            <div class="item-photo"><img src="https://tofuu.getjusto.com/orioneat-prod-resized/YHHHkDnXc3RmWdJ7Q-1200-1200.webp" alt="Nombre del Plato"></div>
+            <div class="item-name">Papas Gajo</div>
+            <div class="item-price">120$</div>
+            </div></center>  
+    <center><div class="descripcion-hamburguesa">
+                <p>
+                    Saborea la irresistible textura crujiente por fuera y suave por dentro de nuestras papas gajo recién fritas en aceite. Cortadas en forma de gajos generosos y sazonadas con una mezcla de especias selectas que realzan su sabor único. Cada bocado es una explosión de delicioso sabor y una experiencia gastronómica incomparable. Perfectas como acompañamiento para tus platos favoritos o simplemente como un tentador aperitivo.
+                 </p>
+            </div></center>    
+    <center><div class="disclaimer">
+                <p>
+                **Imagen de muestra, no representa el resultado final.
+                </p>
+            </div></center>
+    <center><button class="rsvp-button" href="tel:+52 639 150 2990">RSVP</button></center>
+        </div>
+    <center><div class="redes1"><p lang="en"></p></div></center>
         </main>
     </body>
 </html>
