--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title>La Última Bar</title>
       <script src="script.js"></script>
       <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="footer.css">
     </head>
     <body>
     <header>
@@ -102,5 +103,18 @@
   <p lang="en"></p>
 </div></center>
       </main>
+      <section id="copy-right">
+        <div class="copy-right-sec"><i class="fa-solid fa-copyright"></i>  
+            <a href="mailto: laultimadelicias@gmail.com">
+                CORREO: laultimadelicias@gmail.com</a><br>
+            <a href="tel:52639150 2990">
+                TELEFONO: 639 150 2990</a><br>
+            <a href="https://www.facebook.com/barlaultimadelicias23" target="_blank">REDES SOCIALES: Facebook</a><br>
+            <a href="https://instagram.com" target="_blank"> GALERIA DE FOTOS: Instagram</a><br>
+            <div id="map-container">
+                <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Calle%202a.%20Nte.%20218,%20Nte%202,%2033000%20Delicias,%20Chih.+(La%20%C3%9Altima%20Bar)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" scrolling="yes"></iframe>
+            </div> 
+        </div>
+      </section>
     </body>
 </html>  
